<resources>
    <string name="app_name">THA_APP_204013D</string>
    <string name="add">Add</string>
    <string name="productImg">ProductImg</string>
    <string name="producttitle">ProductTitle</string>
    <string name="productDesc">ProductDesc</string>
    <string name="productprice">ProductPrice</string>
    <string name="edit">Edit</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_price">Item Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="btnAdd">Add</string>
</resources>